--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Cats - Home</title>
+        <meta charset="utf-8">
+    </head>
+    <body>
+        <header>
+            <h1>Cats</h1>
+            <img src="images/image.png" alt="header nav image">
 
+            <map name="#workmap">
+                <area shape="rect" coords="4, 25, 83, 84" href="index.html" alt="image to index page">
+            </map>
+        </header>
+        <main>
+            <table>
+                <form action="maito:email@email.com">
+                    <tbody>
+                        <tr>
+                            <td>
+                                <label for="fname">First Name:</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="text" name="fname">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="lname">Last Name:</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="text" name="lname">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <label for="email">Email Address:</label>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <input type="text" name="email">
+                            </td>
+                        </tr>
+                        <tr>
+                            <td colspan="2">
+                                <input type="sumbit" value="submit" class="btnButton">
+                                <input type="reset" value="Reset" class="btnButton">
+                            </td>
+                        </tr>
+                    </tbody>
+                </form>
+            </table>
+        </main>
+        <footer>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                </ul>
+            </nav>
+            <p>&copy;copyright - SllBoces Seaway Software Developers</p>
+            <h4>Fair Use:</h4>
+            <p>This is for educational purposes only.</p>
+        </footer>
+    </body>
+</html>
