--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </tr>
                         <tr>
                             <td colspan="2">
-                                <input type="sumbit" value="submit" class="btnButton">
+                                <input type="submit" value="Submit" class="btnButton">
                                 <input type="reset" value="Reset" class="btnButton">
                             </td>
                         </tr>
